feat(turbo): auto GC mode - G1 on limited hosts, ZGC only with spare cores+heap
On a 4-core i7-6700 with 9GB heap ZGC actually regresses: its concurrent GC
threads and 15-30% memory overhead fight the server thread. make-start now
resolves turbo.jvm.gc-mode (auto by default):
  - auto: Generational ZGC when 6+ cores AND >=14GB heap, otherwise G1 Aikar
  - g1/zgc: force either collector regardless of the heuristic
The generated bat keeps a user-editable 'set HEAP=' and swaps the flag block
per mode; /turbo jvm now also prints the recommended mode and why.

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>